--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ ggplot(participant_data, aes(x = age, y = lesion_number)) +
     panel.grid.minor = element_line(color = &quot;gray95&quot;, size = 0.2)  # Light minor grid lines
   )
 </code></pre>
-<p><img src="https://raw.githubusercontent.com/LK-Github-lgtm/in2science/blob/main/file_show.png" alt="Description"></p>
+<p>![Description]({% raw %}{{ site.baseurl }}{% endraw %}/file_show.png)</p>
 <h2>BMI and Lesion Number</h2>
 <p>We wanted to see if there was a relatiionship between lesion number and BMI and so we plotted a graph to show the correlation.</p>
 <pre><code class="language-r">ggplot(participant_data, aes(x = bmi, y = lesion_number)) +
@@ -51,7 +51,7 @@ ggplot(participant_data, aes(x = age, y = lesion_number)) +
   ) +
   geom_smooth(method = &quot;lm&quot;, color = &quot;red&quot;, se = FALSE, linetype = &quot;dashed&quot;) # Add a regression line
 </code></pre>
-<p><img src="https://raw.githubusercontent.com/LK-Github-lgtm/in2science/blob/main/bmi_lesion_number.png" alt="Description"></p>
+<p>![Description]({% raw %}{{ site.baseurl }}{% endraw %}/bmi_lesion_number.png)</p>
 <h2>Graphs to show the height, age and weight in participants</h2>
 <p>We wanted to compare the participants height, age and weight to see if there was a correlation between the three.</p>
 <pre><code class="language-r"># Create each plot separately
@@ -76,7 +76,7 @@ age_plot &lt;- ggplot(participant_data, aes(x = age)) +
 # Combine the plots side by side
 grid.arrange(height_plot, weight_plot, age_plot, ncol = 3)
 </code></pre>
-<p><img src="https://raw.githubusercontent.com/LK-Github-lgtm/in2science/blob/main/height_weight_age.png" alt="Description"></p>
+<p>![Description]({% raw %}{{ site.baseurl }}{% endraw %}/height_weight_age.png)</p>
 <h2>Calculating the p and r value</h2>
 <p>To see if the results we found were significant, we decided to run a statistical test.</p>
 <h3>Calculate p-value using correlation test on filtered data</h3>
